<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/room_add_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape_tv_operation_dialog_btn_normal_bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp">

            <TextView
                android:id="@+id/room_add_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/room_add_str"
                android:textColor="@color/setting_black"
                android:textSize="16sp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/room_add_name_et"
            style="@style/dialog_edittext"
            android:hint="@string/room_add_name_hint_str"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="0dp"
            android:paddingLeft="10dp"/>

        <GridView
            android:id="@+id/room_add_type_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:listSelector="@null"
            android:numColumns="4"/>

        <View style="@style/horizontal_line"
            android:background="@color/color_0090ff"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:id="@+id/room_add_btn_ll"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/room_add_cancel"
                style="@style/dialog_btn"
                android:text="@string/hint_cannel"
                android:background="@drawable/selector_dialog_item_left_corner_round"/>

            <View style="@style/vertical_line"
                android:background="@color/color_0090ff"/>

            <TextView
                android:id="@+id/room_add_ensure"
                style="@style/dialog_btn"
                android:text="@string/bt_ok_str"
                android:background="@drawable/selector_dialog_item_right_corner_round"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>