<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/bg_layout_style">

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_40p"
        android:orientation="vertical">

        <View style="@style/personal_page_top_line" />

        <com.kzksmarthome.common.biz.widget.EditTextWithDel
            android:id="@+id/reset_pwd_phone_et"
            style="@style/login_edittext"
            android:layout_height="46dp"
            android:layout_marginLeft="@dimen/margin_30p"
            android:layout_marginRight="@dimen/margin_30p"
            android:hint="@string/enter_mobile"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLength="16"
            android:textColorHint="@color/secondary_gray" />

        <View
            style="@style/personal_page_top_line"
            android:layout_marginLeft="@dimen/margin_30p" />

        <View style="@style/personal_page_top_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/send_again_btn"
                style="@style/main_tv_gray_14sp"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:text="@string/send_sms_str" />

            <View
                android:id="@+id/line"
                style="@style/vertical_line"
                android:layout_height="50dp"
                android:layout_toLeftOf="@id/send_again_btn" />

            <com.kzksmarthome.common.biz.widget.EditTextWithDel
                android:id="@+id/sms_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_30p"
                android:layout_marginRight="@dimen/margin_30p"
                android:layout_toLeftOf="@id/line"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/enter_sms"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/secondary_gray"
                android:textSize="@dimen/textsize_16sp" />
        </RelativeLayout>

        <View style="@style/personal_page_top_line" />

        <com.kzksmarthome.common.biz.widget.EditTextWithDel
            android:id="@+id/reset_pwd_newpwd_et"
            style="@style/login_edittext"
            android:layout_height="46dp"
            android:layout_marginLeft="@dimen/margin_30p"
            android:layout_marginRight="@dimen/margin_30p"
            android:hint="@string/enter_new_pwd"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textColorHint="@color/secondary_gray" />

        <View
            style="@style/personal_page_top_line"
            android:layout_marginLeft="@dimen/margin_30p" />

        <View style="@style/personal_page_top_line" />
    </LinearLayout>

    <Button
        android:id="@+id/commit_psw"
        style="@style/login_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/personal_small_height"
        android:layout_below="@id/top_layout"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/margin_30p"
        android:layout_marginRight="@dimen/margin_30p"
        android:layout_marginTop="@dimen/margin_40p"
        android:text="@string/complete_str" />

</RelativeLayout>